Major best practices update
- Injected removal of quarto post thumbnails
- Made first gallery images not lazy loaded
- Added head metadata (description, title, etc.); schema.org structured data; adjusted order of head tags
- Switched images to webp where possible
- Switched to `:not(:first-child)` & `margin-bottom` for spacing elements
- Switched to local fonts
- Added google verification

--- a/config/jobs.yaml
+++ b/config/jobs.yaml
@@ -106,7 +106,8 @@ static_assets:
   steps:
     assets_move: [
       {include: "404\\.html|robots\\.txt"},
-      {subtarget: "assets/img", include: "img$"}
+      {subtarget: "assets/img", include: "img$"},
+      {subtarget: "assets/fonts", include: "fonts$"},
     ]
 
 global_assets:
