--- a/src/gallery/images.yaml
+++ b/src/gallery/images.yaml
@@ -1,5 +1,5 @@
 araucaria:
-  src: ./araucaria.gif
+  src: ./araucaria.webm
   size: [3, 2]
   alt: An Araucaria tree
   description: An Araucaria tree, native to southern Brazil. I like how different it is from other pine trees.
@@ -7,7 +7,7 @@ araucaria:
   when: Dec/2024
 
 galdi:
-  src: ./galdi.jpg
+  src: ./galdi.webp
   size: [3, 3]
   alt: Mosaic art by Antoni Gaudí
   description: I loved the Galdí architecture in Barcelona, the mosaics and nature-inspired forms. This one is in Parque Güell.
@@ -15,11 +15,11 @@ galdi:
   when: Nov/2023
 
 rio:
-  src: ./rio.jpg
+  src: ./rio.webp
   size: [2, 4]
   alt: Rio de Janeiro view
   title: Rio de Janeiro view
-  description: Went to Rio and took no pictures, just this one already on the way back. Was invited there by the master in economics programs of FGV-RJ and PUC-Rio. Brazil lost to Argentina there, that day :(.
+  description: Went to Rio and took no pictures, just this one already on the way back. Was invited there by the graduate-level economics programs of FGV-RJ and PUC-Rio. Brazil lost to Argentina there, that day :(.
   where: Rio de Janeiro, Brazil
   when: Nov/2023
 
@@ -32,7 +32,7 @@ cabana_praia:
   when: Dec/2018
 
 flores:
-  src: ./flores.jpg
+  src: ./flores.webp
   size: [3, 2]
   alt: A flower bouquet
   description: A bouquet of flowers I made for a very special someone.
@@ -40,7 +40,7 @@ flores:
   when: Mai/2025
 
 barco_nova_vida:
-  src: ./barco_nova_vida.jpg
+  src: ./barco_nova_vida.webp
   size: [3, 4]
   alt: Tropical island viewed from a boat called 'Nova Vida'
   description: A boat trip around the decently preserved coastline of Paraty RJ, with lots of Mata Atlântica, one of my favorite biomes. The boat was called 'Nova Vida' (New Life).
@@ -48,7 +48,7 @@ barco_nova_vida:
   when: Jan/2024
 
 serra_orgaos:
-  src: ./serra_orgaos.jpeg
+  src: ./serra_orgaos.webp
   size: [3, 4]
   alt: Serra dos Órgãos mountains
   description: Hiking in Serra dos Órgãos National Park, in Teresópolis RJ. The name comes from the organ-tube-like rock formations. Went running downhill on the back, very fun.
@@ -57,7 +57,7 @@ serra_orgaos:
 
 # Arbitrarily change the dimensions on these last two to avoid holes
 gallery:
-  src: ./gallery.png
+  src: ./gallery.webp
   size: [3, 2]
   alt: Gallery's masonry algorithm written in python/numpy
   description: "Start with an empty grid. Find the first empty row, then column. Pick some image that fit in the right, randomly, but preferring some width and height mismatch. If no image fit, mark as a 'hole'. Repeat until all rectangles are placed. Run several draws, and pick the one with: less holes, then less shared divides, then highest height diversity."
@@ -65,7 +65,7 @@ gallery:
   when: ""
 
 costelas:
-  src: ./costelas.png
+  src: ./costelas.webp
   size: [3, 1]
   alt: Adam's ribs 
   description: Green and orange is my favorite combination of colors, partially inspired by RColorBrewer's palette 'Dark2'. I also grew up with a beautiful Adam's ribs plant in my home. The site's aesthetic is inspired by these two things.  
